--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="PerameSoftware"
+      content="gbsfDeveloper"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>PerameSoftware</title>
+    <title>gbsfDeveloper</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
